--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.4...3.18)
 
-# Improves language server diagnostics when developing this project.
+# Save compiler option details, which a language server can use for improved
+# diagnostics when developing this project.
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 # Work around a version compatibility issue between nvcc and g++ when compiling
@@ -10,13 +11,13 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 # using tools like compute-sanitizer.
 set(CMAKE_CUDA_FLAGS "-ccbin=g++-10 -lineinfo")
 
-# Uncomment to print out each command as it's executed:
+# Uncomment to print out each command as it's executed for debugging purposes.
 # set(CMAKE_VERBOSE_MAKEFILE ON)
 
 project(kernel LANGUAGES CXX CUDA)
 project(c_demo LANGUAGES CXX CUDA)
 
-# The Python module version of this code.
+# Bundle all the C++ code for this project as a Python module.
 find_package(Python 3.10 COMPONENTS Interpreter Development REQUIRED)
 find_package(pybind11 REQUIRED)
 pybind11_add_module(
@@ -30,6 +31,7 @@ pybind11_add_module(
     simulator.cu)
 
 # For debugging, build a pure C++ simulation demo that doesn't include Pybind11
+# or Python in any way.
 add_executable(
     cpp_demo
     development.cu
@@ -39,12 +41,13 @@ add_executable(
     selection.cu
     simulator.cu)
 
-# Force all C++ code to build with g++ 10, so that the host-side bytecode is
-# linkcable with the device-side bytecode. It seems like this has to come after
-# loading the pybind11 libraries to effect them.
+# Force all C++ code to build with g++ 10, so that code that runs on host and
+# device is linkable with host-only code. It seems like this has to come after
+# loading the pybind11 libraries to affect them.
 set(CMAKE_CXX_COMPILER /usr/bin/g++-10)
 
-# Necessary to include __device__ functions across file boundaries.
+# Configuration options required to reference __device__ functions across file
+# boundaries.
 set_target_properties(kernel PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 set_target_properties(cpp_demo PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 
