Updated fitness functions, started playing with compressibility.

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -41,6 +41,12 @@ add_executable(
     selection.cu
     simulator.cu)
 
+find_package(nvcomp 3.0.2 REQUIRED)
+target_link_libraries(
+    kernel PRIVATE nvcomp::nvcomp)
+target_link_libraries(
+    cpp_demo PRIVATE nvcomp::nvcomp)
+
 # Force all C++ code to build with g++ 10, so that code that runs on host and
 # device is linkable with host-only code. It seems like this has to come after
 # loading the pybind11 libraries to affect them.
